// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeepleCard - Snapshots > Complete Examples > should match snapshot for fully loaded game card 1`] = `
<div
  aria-label="Game: Twilight Imperium"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="complete-game-card"
  data-variant="grid"
  role="button"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
    <span
      class="max-w-[80px] truncate bg-card/90 backdrop-blur-sm px-2 py-0.5 rounded-md text-[10px] font-semibold text-muted-foreground border border-border/50 cursor-default"
      data-state="closed"
    >
      Popular
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/ti4.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-0.5 mb-2"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito"
      >
        3-6
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="font-nunito"
      >
        4-8h
      </span>
    </span>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Complete Examples > should match snapshot for tournament hero 1`] = `
<article
  aria-label="Event: MeepleAI Tournament"
  class="group cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] [box-shadow:var(--shadow-warm-xl)] hover:[box-shadow:var(--shadow-warm-2xl)] hover:scale-[1.01]"
  data-entity="event"
  data-testid="meeple-card"
  data-variant="hero"
  style="--mc-entity-color: hsl(350 89% 60%); will-change: transform, box-shadow, outline;"
>
  <span
    class="absolute top-4 right-[-2rem] z-20 py-1 px-10 text-xs font-bold uppercase tracking-wider text-white shadow-md rotate-45"
    style="background-color: rgb(244, 62, 92);"
  >
    Event
  </span>
  <div
    class="overflow-hidden absolute inset-0"
  >
    <img
      alt="MeepleAI Tournament"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="100vw"
      src="https://example.com/tournament.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-6"
  >
    <div
      class="flex gap-2 mt-3 min-w-0"
    >
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(244, 62, 92);"
        title="Register Now"
      >
        Register Now
      </button>
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
        title="Learn More"
      >
        Learn More
      </button>
    </div>
    <h3
      class="font-quicksand font-bold leading-tight text-2xl text-white mb-1 [text-shadow:0_2px_8px_rgba(0,0,0,0.3)]"
    >
      MeepleAI Tournament
    </h3>
    <p
      class="text-white/85 text-sm mb-2"
    >
      Grand Finals · Live Streamed
    </p>
    <div
      class="flex flex-wrap gap-2 mt-auto"
    >
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trophy w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
          />
          <path
            d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
          />
          <path
            d="M18 9h1.5a1 1 0 0 0 0-5H18"
          />
          <path
            d="M4 22h16"
          />
          <path
            d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
          />
          <path
            d="M6 9H4.5a1 1 0 0 1 0-5H6"
          />
        </svg>
        <span>
          $500 Prize
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map-pin w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
          />
          <circle
            cx="12"
            cy="10"
            r="3"
          />
        </svg>
        <span>
          Online
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          128 players
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for collection entity 1`] = `
<article
  aria-label="Custom: Euro Games Essentials"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="custom"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(220 70% 50%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(38, 98, 217);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(38, 98, 217);"
    >
      Custom
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Euro Games Essentials"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/collection.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Euro Games Essentials
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Curated by @boardgame_guru
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <span
        class="font-nunito"
      >
        24 games
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <span
        class="font-nunito"
      >
        1.2K views
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for custom entity 1`] = `
<article
  aria-label="Custom: Custom Entity"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="custom"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(142 76% 36%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(22, 162, 73);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(22, 162, 73);"
    >
      Custom
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Custom Entity"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/custom.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Custom Entity
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      With custom color
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <span
        class="font-nunito"
      >
        Custom metadata
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for event entity 1`] = `
<article
  aria-label="Event: Saturday Game Night"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="event"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(350 89% 60%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(244, 62, 92);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(244, 62, 92);"
    >
      Event
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Saturday Game Night"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/event.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Saturday Game Night
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Feb 15, 2026 · 7:00 PM
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-map-pin w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
        />
        <circle
          cx="12"
          cy="10"
          r="3"
        />
      </svg>
      <span
        class="font-nunito"
      >
        Milano, IT
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito"
      >
        4/6 spots
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for game entity 1`] = `
<article
  aria-label="Game: Azul"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Azul"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/azul.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Azul
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Plan B Games
    </p>
    <div
      aria-label="Rating: 4.2 out of 5"
      class="flex items-center gap-0.5 mb-2"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        4.2
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito"
      >
        2-4
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Entity Types > should match snapshot for player entity 1`] = `
<article
  aria-label="Player: Marco Rossi"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="player"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(262 83% 58%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(124, 59, 237);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(124, 59, 237);"
    >
      Player
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Marco Rossi"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/avatar.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Marco Rossi
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      @marco_games · Since 2019
    </p>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <span
        class="font-nunito"
      >
        142 plays
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trophy w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
        />
        <path
          d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
        />
        <path
          d="M18 9h1.5a1 1 0 0 0 0-5H18"
        />
        <path
          d="M4 22h16"
        />
        <path
          d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
        />
        <path
          d="M6 9H4.5a1 1 0 0 1 0-5H6"
        />
      </svg>
      <span
        class="font-nunito"
      >
        Top 5%
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for compact variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-2 p-2 rounded-lg bg-card/80 border border-border/30 hover:bg-card"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="compact"
  style="--mc-entity-color: hsl(25 95% 45%);"
>
  <span
    aria-hidden="true"
    class="w-2 h-2 rounded-full flex-shrink-0"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="flex-1 min-w-0"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-sm text-card-foreground"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-xs mb-0"
    >
      Fantasy Flight Games · 2017
    </p>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for featured variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-md)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="featured"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden aspect-[16/9]"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 768px) 100vw, 50vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-5 py-4"
  >
    <div
      class="flex gap-2 mt-3 min-w-0"
    >
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
        title="Browse"
      >
        Browse
      </button>
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
        title="Clone"
      >
        Clone
      </button>
    </div>
    <h3
      class="font-quicksand font-bold leading-tight text-xl mb-1 text-card-foreground"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-0.5 mb-2"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span
        class="flex items-center gap-1 text-muted-foreground text-[10px] sm:text-xs bg-muted px-1.5 sm:px-2 py-px sm:py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-muted-foreground text-[10px] sm:text-xs bg-muted px-1.5 sm:px-2 py-px sm:py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 6v6l4 2"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for grid variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-0.5 mb-2"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-evenly gap-2 px-3 py-2 border-t border-border bg-muted/60 dark:bg-muted/40 rounded-b-2xl"
    data-testid="meeple-card-footer"
  >
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
      <span
        class="font-nunito"
      >
        3-6
      </span>
    </span>
    <span
      class="flex items-center gap-1.5 text-[0.7rem] font-semibold text-foreground/65 dark:text-foreground/60"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-clock w-3.5 h-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </svg>
      <span
        class="font-nunito"
      >
        4-8h
      </span>
    </span>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for hero variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] [box-shadow:var(--shadow-warm-xl)] hover:[box-shadow:var(--shadow-warm-2xl)] hover:scale-[1.01]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="hero"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    class="absolute top-4 right-[-2rem] z-20 py-1 px-10 text-xs font-bold uppercase tracking-wider text-white shadow-md rotate-45"
    style="background-color: rgb(224, 97, 6);"
  >
    Game
  </span>
  <div
    class="overflow-hidden absolute inset-0"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="100vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-6"
  >
    <div
      class="flex gap-2 mt-3 min-w-0"
    >
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
        title="Register Now"
      >
        Register Now
      </button>
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
        title="Learn More"
      >
        Learn More
      </button>
    </div>
    <h3
      class="font-quicksand font-bold leading-tight text-2xl text-white mb-1 [text-shadow:0_2px_8px_rgba(0,0,0,0.3)]"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-white/85 text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-0.5 mb-2 text-white"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2 mt-auto"
    >
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-white/90 text-sm"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 6v6l4 2"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Layout Variants > should match snapshot for list variant 1`] = `
<article
  aria-label="Game: Twilight Imperium"
  class="group relative overflow-hidden cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-4 p-3 rounded-xl bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-md)] hover:translate-x-1"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="list"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="w-2 h-2 rounded-full flex-shrink-0"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="relative overflow-hidden w-16 h-16 rounded-lg flex-shrink-0"
  >
    <img
      alt="Twilight Imperium"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="64px"
      src="https://example.com/game.jpg"
    />
  </div>
  <div
    class="flex-1 min-w-0 py-1"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-base text-card-foreground line-clamp-2"
    >
      Twilight Imperium
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Fantasy Flight Games · 2017
    </p>
    <div
      aria-label="Rating: 8.7 out of 10"
      class="flex items-center gap-0.5 mb-2"
    >
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-amber-400"
      >
        ★
      </span>
      <span
        class="text-[0.78rem] text-muted-foreground/30"
      >
        ★
      </span>
      <span
        class="text-[0.7rem] font-semibold text-muted-foreground ml-1"
      >
        8.7
      </span>
    </div>
    <div
      class="flex flex-wrap gap-2"
    >
      <span
        class="flex items-center gap-1 text-muted-foreground text-[10px] sm:text-xs bg-muted px-1.5 sm:px-2 py-px sm:py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-users w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          3-6
        </span>
      </span>
      <span
        class="flex items-center gap-1 text-muted-foreground text-[10px] sm:text-xs bg-muted px-1.5 sm:px-2 py-px sm:py-0.5 rounded-md"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3 opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 6v6l4 2"
          />
        </svg>
        <span>
          4-8h
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for compact skeleton 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-2 p-2 rounded-lg bg-card/80 border border-border/30 hover:bg-card animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden w-10 h-10 rounded-md flex-shrink-0 bg-muted"
  />
  <div
    class="flex-1 min-w-0"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for featured skeleton 1`] = `
<div
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-md)] hover:[box-shadow:var(--shadow-warm-xl)] animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden bg-muted"
  />
  <div
    class="flex-1 flex flex-col px-5 py-4"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for grid skeleton 1`] = `
<div
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden rounded-t-2xl bg-muted"
  />
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for hero skeleton 1`] = `
<div
  class="group cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 relative flex flex-col rounded-3xl overflow-hidden min-h-[320px] [box-shadow:var(--shadow-warm-xl)] hover:[box-shadow:var(--shadow-warm-2xl)] hover:scale-[1.01] animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="overflow-hidden absolute inset-0 bg-muted"
  />
  <div
    class="relative z-10 mt-auto flex flex-col justify-end p-6"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for list skeleton 1`] = `
<div
  class="group relative overflow-hidden cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-row items-center gap-4 p-3 rounded-xl bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-md)] hover:translate-x-1 animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden w-16 h-16 rounded-lg flex-shrink-0 bg-muted"
  />
  <div
    class="flex-1 min-w-0 py-1"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Loading State > should match snapshot for loading prop 1`] = `
<div
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] animate-pulse pointer-events-none"
  data-testid="meeple-card-skeleton"
>
  <div
    class="relative overflow-hidden rounded-t-2xl bg-muted"
  />
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <div
      class="h-5 bg-muted rounded w-3/4 mb-2"
    />
    <div
      class="h-3 bg-muted rounded w-1/2 mb-3"
    />
    <div
      class="flex gap-2"
    >
      <div
        class="h-4 bg-muted rounded w-12"
      />
      <div
        class="h-4 bg-muted rounded w-12"
      />
    </div>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with badge 1`] = `
<article
  aria-label="Game: New Release"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
    <span
      class="max-w-[80px] truncate bg-card/90 backdrop-blur-sm px-2 py-0.5 rounded-md text-[10px] font-semibold text-muted-foreground border border-border/50 cursor-default"
      data-state="closed"
    >
      New
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <img
      alt="New Release"
      class="object-cover transition-transform duration-500 group-hover:scale-[1.06]"
      data-fill="true"
      data-loading="lazy"
      data-sizes="(max-width: 640px) 50vw, (max-width: 1024px) 33vw, 25vw"
      src="https://example.com/game.jpg"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      New Release
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Publisher
    </p>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with disabled action 1`] = `
<article
  aria-label="Game: Featured Game"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-md)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="featured"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden aspect-[16/9]"
  >
    <div
      class="absolute inset-0 flex items-center justify-center"
      style="background: linear-gradient(135deg, rgb(240, 217, 194), rgb(236, 176, 147));"
    >
      <svg
        aria-hidden="true"
        class="transition-transform duration-500 ease-out group-hover:rotate-12 opacity-60"
        fill="none"
        height="120"
        role="presentation"
        viewBox="0 0 100 100"
        width="120"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <lineargradient
            id="dice-top"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 65%, 75%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(280, 60%, 65%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-left"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 60%, 65%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(300, 55%, 55%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-right"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(300, 55%, 55%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(320, 50%, 50%)"
            />
          </lineargradient>
          <filter
            id="dot-shadow"
          >
            <fedropshadow
              dx="0"
              dy="1"
              flood-opacity="0.3"
              stdDeviation="1"
            />
          </filter>
        </defs>
        <path
          d="M 50 15 L 80 30 L 50 45 L 20 30 Z"
          fill="url(#dice-top)"
          stroke="rgba(255,255,255,0.2)"
          stroke-width="0.5"
        />
        <path
          d="M 20 30 L 50 45 L 50 85 L 20 70 Z"
          fill="url(#dice-left)"
          stroke="rgba(0,0,0,0.1)"
          stroke-width="0.5"
        />
        <path
          d="M 50 45 L 80 30 L 80 70 L 50 85 Z"
          fill="url(#dice-right)"
          stroke="rgba(0,0,0,0.15)"
          stroke-width="0.5"
        />
        <circle
          cx="35"
          cy="28"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="50"
          cy="30"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="65"
          cy="32"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="38"
          cy="36"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="62"
          cy="39"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="30"
          cy="52"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="40"
          cy="63"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="60"
          cy="50"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="55"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="60"
          cy="65"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="70"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <path
          d="M 50 15 L 80 30"
          stroke="rgba(255,255,255,0.3)"
          stroke-linecap="round"
          stroke-width="1"
        />
        <path
          d="M 50 15 L 20 30"
          stroke="rgba(255,255,255,0.25)"
          stroke-linecap="round"
          stroke-width="1"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-5 py-4"
  >
    <div
      class="flex gap-2 mt-3 min-w-0"
    >
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 text-white shadow-md hover:shadow-lg"
        style="background-color: rgb(224, 97, 6);"
        title="Available"
      >
        Available
      </button>
      <button
        class="flex-1 min-w-0 py-2 px-3 md:px-4 rounded-lg font-quicksand font-semibold text-xs md:text-sm truncate transition-all duration-200 hover:-translate-y-0.5 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:translate-y-0 bg-muted text-foreground hover:bg-muted/80"
        disabled=""
        title="Sold Out"
      >
        Sold Out
      </button>
    </div>
    <h3
      class="font-quicksand font-bold leading-tight text-xl mb-1 text-card-foreground"
    >
      Featured Game
    </h3>
    <p
      class="text-muted-foreground text-sm mb-2"
    >
      Publisher
    </p>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with minimal props 1`] = `
<article
  aria-label="Game: Minimal Card"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <div
      class="absolute inset-0 flex items-center justify-center"
      style="background: linear-gradient(135deg, rgb(240, 217, 194), rgb(236, 176, 147));"
    >
      <svg
        aria-hidden="true"
        class="transition-transform duration-500 ease-out group-hover:rotate-12 opacity-60"
        fill="none"
        height="80"
        role="presentation"
        viewBox="0 0 100 100"
        width="80"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <lineargradient
            id="dice-top"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 65%, 75%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(280, 60%, 65%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-left"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 60%, 65%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(300, 55%, 55%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-right"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(300, 55%, 55%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(320, 50%, 50%)"
            />
          </lineargradient>
          <filter
            id="dot-shadow"
          >
            <fedropshadow
              dx="0"
              dy="1"
              flood-opacity="0.3"
              stdDeviation="1"
            />
          </filter>
        </defs>
        <path
          d="M 50 15 L 80 30 L 50 45 L 20 30 Z"
          fill="url(#dice-top)"
          stroke="rgba(255,255,255,0.2)"
          stroke-width="0.5"
        />
        <path
          d="M 20 30 L 50 45 L 50 85 L 20 70 Z"
          fill="url(#dice-left)"
          stroke="rgba(0,0,0,0.1)"
          stroke-width="0.5"
        />
        <path
          d="M 50 45 L 80 30 L 80 70 L 50 85 Z"
          fill="url(#dice-right)"
          stroke="rgba(0,0,0,0.15)"
          stroke-width="0.5"
        />
        <circle
          cx="35"
          cy="28"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="50"
          cy="30"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="65"
          cy="32"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="38"
          cy="36"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="62"
          cy="39"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="30"
          cy="52"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="40"
          cy="63"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="60"
          cy="50"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="55"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="60"
          cy="65"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="70"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <path
          d="M 50 15 L 80 30"
          stroke="rgba(255,255,255,0.3)"
          stroke-linecap="round"
          stroke-width="1"
        />
        <path
          d="M 50 15 L 20 30"
          stroke="rgba(255,255,255,0.25)"
          stroke-linecap="round"
          stroke-width="1"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Minimal Card
    </h3>
  </div>
</article>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot with onClick (interactive) 1`] = `
<div
  aria-label="Game: Clickable Card"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  role="button"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <div
      class="absolute inset-0 flex items-center justify-center"
      style="background: linear-gradient(135deg, rgb(240, 217, 194), rgb(236, 176, 147));"
    >
      <svg
        aria-hidden="true"
        class="transition-transform duration-500 ease-out group-hover:rotate-12 opacity-60"
        fill="none"
        height="80"
        role="presentation"
        viewBox="0 0 100 100"
        width="80"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <lineargradient
            id="dice-top"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 65%, 75%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(280, 60%, 65%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-left"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 60%, 65%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(300, 55%, 55%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-right"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(300, 55%, 55%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(320, 50%, 50%)"
            />
          </lineargradient>
          <filter
            id="dot-shadow"
          >
            <fedropshadow
              dx="0"
              dy="1"
              flood-opacity="0.3"
              stdDeviation="1"
            />
          </filter>
        </defs>
        <path
          d="M 50 15 L 80 30 L 50 45 L 20 30 Z"
          fill="url(#dice-top)"
          stroke="rgba(255,255,255,0.2)"
          stroke-width="0.5"
        />
        <path
          d="M 20 30 L 50 45 L 50 85 L 20 70 Z"
          fill="url(#dice-left)"
          stroke="rgba(0,0,0,0.1)"
          stroke-width="0.5"
        />
        <path
          d="M 50 45 L 80 30 L 80 70 L 50 85 Z"
          fill="url(#dice-right)"
          stroke="rgba(0,0,0,0.15)"
          stroke-width="0.5"
        />
        <circle
          cx="35"
          cy="28"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="50"
          cy="30"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="65"
          cy="32"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="38"
          cy="36"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="62"
          cy="39"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="30"
          cy="52"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="40"
          cy="63"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="60"
          cy="50"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="55"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="60"
          cy="65"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="70"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <path
          d="M 50 15 L 80 30"
          stroke="rgba(255,255,255,0.3)"
          stroke-linecap="round"
          stroke-width="1"
        />
        <path
          d="M 50 15 L 20 30"
          stroke="rgba(255,255,255,0.25)"
          stroke-linecap="round"
          stroke-width="1"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      Clickable Card
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Publisher
    </p>
  </div>
</div>
`;

exports[`MeepleCard - Snapshots > Special States > should match snapshot without image 1`] = `
<article
  aria-label="Game: No Image Game"
  class="group relative cursor-pointer transition-all duration-[350ms] ease-[cubic-bezier(0.4,0,0.2,1)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 flex flex-col rounded-2xl overflow-hidden bg-card border border-border/50 [box-shadow:var(--shadow-warm-sm)] hover:[box-shadow:var(--shadow-warm-xl)] hover:outline-2 hover:outline-offset-2 [&:hover]:[-webkit-transform:translateY(-6px)] [&:hover]:[transform:translateY(-6px)]"
  data-entity="game"
  data-testid="meeple-card"
  data-variant="grid"
  style="--mc-entity-color: hsl(25 95% 45%); will-change: transform, box-shadow, outline;"
>
  <span
    aria-hidden="true"
    class="absolute left-0 top-0 bottom-0 w-1 group-hover:w-1.5 transition-all duration-250"
    style="background-color: rgb(224, 97, 6);"
  />
  <div
    class="absolute top-1.5 left-1.5 sm:top-2 sm:left-2.5 z-10 flex flex-col gap-1 sm:gap-1.5"
    data-testid="meeple-card-tag-stack"
  >
    <span
      class="max-w-[60px] sm:max-w-[80px] truncate px-1.5 sm:px-2 py-px sm:py-0.5 text-[8px] sm:text-[9px] font-extrabold uppercase tracking-[0.04em] text-white rounded-[5px] sm:rounded-[6px] shadow-sm cursor-default"
      data-state="closed"
      style="background-color: rgb(224, 97, 6);"
    >
      Game
    </span>
  </div>
  <div
    class="relative overflow-hidden rounded-t-2xl aspect-square sm:aspect-[7/10]"
  >
    <div
      class="absolute inset-0 flex items-center justify-center"
      style="background: linear-gradient(135deg, rgb(240, 217, 194), rgb(236, 176, 147));"
    >
      <svg
        aria-hidden="true"
        class="transition-transform duration-500 ease-out group-hover:rotate-12 opacity-60"
        fill="none"
        height="80"
        role="presentation"
        viewBox="0 0 100 100"
        width="80"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <lineargradient
            id="dice-top"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 65%, 75%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(280, 60%, 65%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-left"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(280, 60%, 65%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(300, 55%, 55%)"
            />
          </lineargradient>
          <lineargradient
            id="dice-right"
            x1="0%"
            x2="100%"
            y1="0%"
            y2="100%"
          >
            <stop
              offset="0%"
              stop-color="hsl(300, 55%, 55%)"
            />
            <stop
              offset="100%"
              stop-color="hsl(320, 50%, 50%)"
            />
          </lineargradient>
          <filter
            id="dot-shadow"
          >
            <fedropshadow
              dx="0"
              dy="1"
              flood-opacity="0.3"
              stdDeviation="1"
            />
          </filter>
        </defs>
        <path
          d="M 50 15 L 80 30 L 50 45 L 20 30 Z"
          fill="url(#dice-top)"
          stroke="rgba(255,255,255,0.2)"
          stroke-width="0.5"
        />
        <path
          d="M 20 30 L 50 45 L 50 85 L 20 70 Z"
          fill="url(#dice-left)"
          stroke="rgba(0,0,0,0.1)"
          stroke-width="0.5"
        />
        <path
          d="M 50 45 L 80 30 L 80 70 L 50 85 Z"
          fill="url(#dice-right)"
          stroke="rgba(0,0,0,0.15)"
          stroke-width="0.5"
        />
        <circle
          cx="35"
          cy="28"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="50"
          cy="30"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="65"
          cy="32"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="38"
          cy="36"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="62"
          cy="39"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.9"
          r="2"
        />
        <circle
          cx="30"
          cy="52"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="40"
          cy="63"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.85"
          r="2.5"
        />
        <circle
          cx="60"
          cy="50"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="55"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="60"
          cy="65"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <circle
          cx="70"
          cy="70"
          fill="white"
          filter="url(#dot-shadow)"
          opacity="0.8"
          r="2.5"
        />
        <path
          d="M 50 15 L 80 30"
          stroke="rgba(255,255,255,0.3)"
          stroke-linecap="round"
          stroke-width="1"
        />
        <path
          d="M 50 15 L 20 30"
          stroke="rgba(255,255,255,0.25)"
          stroke-linecap="round"
          stroke-width="1"
        />
      </svg>
    </div>
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none"
    />
    <div
      aria-hidden="true"
      class="absolute inset-0 pointer-events-none group-hover:animate-mc-shimmer"
      style="background: linear-gradient(105deg, transparent 40%, rgba(255, 255, 255, 0.25) 50%, transparent 60%); transform: translateX(-100%);"
    />
  </div>
  <div
    class="flex-1 flex flex-col px-2.5 py-2 sm:px-3.5 sm:py-3"
  >
    <h3
      class="font-quicksand font-bold leading-tight text-[0.8rem] sm:text-[0.95rem] mb-0.5 text-card-foreground truncate"
    >
      No Image Game
    </h3>
    <p
      class="text-muted-foreground text-[0.7rem] sm:text-[0.78rem] mt-px mb-0.5 sm:mb-1 truncate"
    >
      Publisher
    </p>
  </div>
</article>
`;
